	  test file and the applicable licenses.
	* test/search_test/LICENSES: Add a file describing the contents of the
	  test file and the applicable licenses.
	* test/search_test/test_search_results.sh: Add additional tests for ensuring
	  the proper handling of the end of the file.
	* test/search_test/test_*end: Add the results of the additional test cases
	  to compare against in the test script.

2016-05-29  SilverNexus
	* output.c: Use fwrite() instead of printf() when telling the user
	  the location of the output file.
	  Only close the output file when we opened one.
	* jump_table.c: Removed extraneous include.
	* fileperuser_search.c: Removed extraneous include.
	* test/performance_test/*: Added performance test to better judge
	  where the cutoffs for choosing a function should lie.
	* test/README: Add a readme to explain some rules for the tests.

2016-05-28  SilverNexus
	* search.c: Extract the needle length checks from the case-insensitive search
	  function and put them outside the function. Use recent macros to ease
	  implementation.
	  Make macros out of the search decision groups for maintainability.
	  Extract needle length checks from case sensitive searches.
	* fileperuser_search.c: Split fileperuser_memcasemem() into fileperuser_memcasemem_boyer(),
	  fileperuser_memcasemem_brute(), and fileperuser_memcasechr().
	  Split fileperuser_memmem() in fileperuser_memmem_boyer() and fileperuser_memmem_brute().
	* fileperuser_search.h: Add function prototypes for new split search functions.
	* test/search_test/*: Add a script to compare current build's search results
	  with expected results.
	* ErrorLog.c: Make the strings for month and error severity static.
	* main.c: Reduce severity of failed directory walk from fatal to error.

2016-05-26  SilverNexus
	* search.c: Define start_line and end_line as const char * in multi-search.
	  Fix a condition structure bug when HAVE_MMAP is not defined.
	* jump_table.c: Loop optimization.

2016-05-25  SilverNexus